--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,13 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
+title: Lynn Cyrin
+email: lynncyrin@gmail.com
+description: >
+  Full Stack Web Developer, Activist, and QTWoC. Founder of
+  CollectQT Likes: Websites Python, Rails, Open Source,
+  Premature Optimizations, Gaming, Space, Sex work, Being
+  Gay
+baseurl: ""
+url: "http://lynncyrin.me"
+twitter_username: lynncyrin
+github_username:  lynnco
 
-# Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
-
-# Build settings
 markdown: kramdown
