--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,9 @@ permalink: pretty
 markdown: kramdown
 gems:
   - jemoji
+  - jekyll-redirect-from
+whitelist:
+  - jekyll-redirect-from
 
 sass:
     style: compressed
